syntax = "proto3";

package dhpcs.liquidity.persistence;

option java_package = "com.dhpcs.liquidity.proto.persistence";

import "google/protobuf/wrappers.proto";

import "dhpcs/liquidity/model.proto";

message v2ZoneCreatedEvent  {
    dhpcs.liquidity.model.Zone zone = 1;
}

message v2ZoneJoinedEvent {
    string client_connection_actor_path = 1;
    bytes public_key = 2;
}

message v2ZoneQuitEvent {
    string client_connection_actor_path = 1;
}

message v2ZoneNameChangedEvent {
    google.protobuf.StringValue name = 1;
}

message v2MemberCreatedEvent {
    dhpcs.liquidity.model.Member member = 1;
}

message v2MemberUpdatedEvent {
    dhpcs.liquidity.model.Member member = 1;
}

message v2AccountCreatedEvent {
    dhpcs.liquidity.model.Account account = 1;
}

message v2AccountUpdatedEvent {
    dhpcs.liquidity.model.Account account = 1;
}

message v2TransactionAddedEvent {
    dhpcs.liquidity.model.Transaction transaction = 1;
}

message ZoneEvent {
    int64 timestamp = 1;
    oneof event {
        v2ZoneCreatedEvent v2_zone_created_event = 2;
        v2ZoneJoinedEvent v2_zone_joined_event = 3;
        v2ZoneQuitEvent v2_zone_quit_event = 4;
        v2ZoneNameChangedEvent v2_zone_name_changed_event = 5;
        v2MemberCreatedEvent v2_member_created_event = 6;
        v2MemberUpdatedEvent v2_member_updated_event = 7;
        v2AccountCreatedEvent v2_account_created_event = 8;
        v2AccountUpdatedEvent v2_account_updated_event = 9;
        v2TransactionAddedEvent v2_transaction_added_event = 10;
    }
}
